src/components/TextMarkdown/styles.scss
.markdownContainer {
  width: 60%;
  margin: 0 auto;
}

.markdownContainerFullWidth {
  width: 100%;
}

.markdownContainer img {
  width: 100%;
}

.markdownContainer pre {
  margin: 10px 0;
  background-color: #343a40;
  border-radius: 2px;
}

.markdownContainer code {
  white-space: normal;
  line-height: 20px;
  color: #36d6ae;
  font-family: 'Oxygen Mono', monospace;
}

.markdownContainer p {
  margin-bottom: 20px;
  text-align: justify;

  &:last-child {
    margin-bottom: 0;
  }
}

.markdownContainer a {
  margin-bottom: 10px;
}

.markdownContainer h1 {
  margin-bottom: 10px;
}

.markdownContainer h2 {
  margin-bottom: 10px;
}

.markdownContainer h3 {
  margin-bottom: 10px;
}

.markdownContainer table {
  margin-bottom: 10px;
}

.markdownContainer hr {
  margin-bottom: 10px;
}

.markdownContainer div {
  margin-bottom: 10px;
}

.markdownContainer ul {
  margin-bottom: 10px;
  margin-left: 20px;
  padding-left: 20px;
}

.markdownContainer blockquote {
  margin: 10px 0;
  padding: 10px 5px 10px 20px;
  border-left: 3px solid #3ab793e3;
}

.markdownContainer table {
  border-collapse: separate;
  border-spacing: 0 5px;
  border: 0;
}

.markdownContainer th {
  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
  border-collapse: separate;
  border-spacing: 5px 5px;
}

.markdownContainer ol {
  padding-left: 20px;
  margin-bottom: 20px;
  margin-left: 20px;
}

